--- a/index.html
+++ b/index.html
@@ -16,13 +16,30 @@
         <!-- MAIN -->
         <main class="page-main">
             <div class="container btn"> 
-                <button id="btn-task">Add Task</button>
-                <button id="btn-sect">Add Section</button>
+                <button class="btn-task">Add Task</button>
+                <button class="btn-sect">Add Section</button>
             </div>
             <div class="container content">
                 <h2><span style='font-size:12px;'>&#11206;</span> New Task</h2>
+                    <ul>
+                        <li><span>&check;</span> Quarterly Newsletter <span></span></li>
+                    </ul>
+
                 <h2><span style='font-size:12px;'>&#11206;</span> New Section</h2>
-                <h2><span style='font-size:12px;'>&#11206;</span> Upcoming</h2>
+                    <ul>
+                        <li><span>&check;</span> Recruiting Blog Post <span></span></li>
+                        <li><span>&check;</span> Mobile App Launch <span></span></li>
+                        <li><span>&cross;</span> Interview John H. <span></span></li>
+                        <li><span>&check;</span> Summit update to mobile storefronts <span></span></li>
+                    </ul>
+
+                <h2><span style='font-size:12px;'>&#11206;</span> Upcoming <span></span></h2>
+                    <ul>
+                        <li><span>&cross;</span> Schedule meeting with Alex <span></span></li>
+                        <li><span>&check;</span> Home page refresh <span></span></li>
+                        <li><span>&check;</span> Onboard new Sales team members <span></span></li>
+                        <li><span>&check;</span> Review editorial calendar <span></span></li>
+                    </ul> 
             </div>
         </main>
 
