--- a/index.html
+++ b/index.html
@@ -20,26 +20,28 @@
                 <button class="btn-sect">Add Section</button>
             </div>
             <div class="container content">
-                <h2><span style='font-size:12px;'>&#11206;</span> New Task</h2>
-                    <ul>
-                        <li><span>&check;</span> Quarterly Newsletter <span></span></li>
-                    </ul>
+                <ol>
+                    <li class="ul-task"><span style='font-size:12px;'>&#11206;</span> New Task</li>
+                        <ul>
+                                <li><span class="check">&check;</span> Quarterly Newsletter <span class="label ed"> Editorial </span></li>
+                        </ul>
 
-                <h2><span style='font-size:12px;'>&#11206;</span> New Section</h2>
-                    <ul>
-                        <li><span>&check;</span> Recruiting Blog Post <span></span></li>
-                        <li><span>&check;</span> Mobile App Launch <span></span></li>
-                        <li><span>&cross;</span> Interview John H. <span></span></li>
-                        <li><span>&check;</span> Summit update to mobile storefronts <span></span></li>
-                    </ul>
+                    <li class="ul-tod"><span style='font-size:12px;'>&#11206;</span> Today</li>
+                        <ul>
+                            <li><span class="check">&check;</span> Recruiting blog post <span class="label ed"> Editorial </span></li>
+                            <li><span class="check">&check;</span> Mobile app launch <span class="label q"> Q1 Goals </span></li>
+                            <li><span class="cross">&cross;</span> Interview John H. <span class="label rec"> Recruiting </span></li>
+                            <li><span class="check">&check;</span> Submit update to mobile storefronts <span class="label mob"> Mobile </span><li>
+                        </ul>      
 
-                <h2><span style='font-size:12px;'>&#11206;</span> Upcoming <span></span></h2>
-                    <ul>
-                        <li><span>&cross;</span> Schedule meeting with Alex <span></span></li>
-                        <li><span>&check;</span> Home page refresh <span></span></li>
-                        <li><span>&check;</span> Onboard new Sales team members <span></span></li>
-                        <li><span>&check;</span> Review editorial calendar <span></span></li>
-                    </ul> 
+                    <li class="ul-upc"><span style='font-size:12px;'>&#11206;</span> Upcoming</li>
+                        <ul>
+                            <li><span class="cross">&cross;</span> Schedule meeting with Alex</li>
+                            <li><span class="check">&check;</span> Homepage refresh <span class="label web"> Website </span></li>
+                            <li><span class="check">&check;</span> Onboard new Sales team members <span class="label sales"> Sales </span></li>
+                            <li><span class="check">&check;</span> Review editorial calendar <span class="label ed"> Editorial </span></li>
+                        </ul>
+                </ol> 
             </div>
         </main>
 
